--- a/.github/ISSUE_TEMPLATE/----------.md
+++ b/.github/ISSUE_TEMPLATE/----------.md
@@ -8,10 +8,16 @@ assignees: ''
 ---
 
 ## リファクタリングの関数・クラス等を指定
-* コードへのリンクや文章で説明。
+* 文章で説明。
 
 ## リファクタリングが必要な理由
 * リファクタリングが必要な理由を具体的に説明。
 
 ## リファクタリング提案
-* 可能なかぎりで（抽象的でも）ここに記述
+* 可能なかぎりで（抽象的でも）ここに記述。
+
+## コードの場所・ファイル等を指定
+* コードへのリンクやファイル等を指定。
+
+## 備考
+* 補足情報を記載。
